@@ -81,6 +81,7 @@
 
 (require 'poem)
 (require 'mcharset)
+(require 'invisible)
 
 (defsubst char-list-to-string (char-list)
   "Convert list of character CHAR-LIST to string."
