@@ -53,46 +53,6 @@
 	 ))
 
 
-;;; @ visible/invisible
-;;;
-
-(defmacro enable-invisible ())
-
-(defmacro end-of-invisible ())
-
-(defun invisible-region (start end)
-  (if (save-excursion
-	(goto-char start)
-	(eq (following-char) ?\n))
-      (setq start (1+ start))
-    )
-  (put-text-property start end 'invisible t)
-  )
-
-(defun visible-region (start end)
-  (put-text-property start end 'invisible nil)
-  )
-
-(defun invisible-p (pos)
-  (if (save-excursion
-	(goto-char pos)
-	(eq (following-char) ?\n))
-      (setq pos (1+ pos))
-    )
-  (get-text-property pos 'invisible)
-  )
-
-(defun next-visible-point (pos)
-  (save-excursion
-    (if (save-excursion
-	  (goto-char pos)
-	  (eq (following-char) ?\n))
-	(setq pos (1+ pos))
-      )
-    (or (next-single-property-change pos 'invisible)
-	(point-max))))
-
-
 ;;; @ dired
 ;;;
 
