@@ -1,5 +1,11 @@
 1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* invisible.el, inv-18.el, inv-19.el, inv-xemacs.el, poe-18.el,
+	poe-19.el, poe-xemacs.el, emu.el, EMU-ELS: Separate invisible
+	features from poe to invisible.
+
+1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* poe.el (eval-and-compile): New macro.
 	Enclose redefinition of `read-string' by `eval-and-compile'.
 
